external/cimanim/cimanim.h

// Timing variation per loop iteration
CIMGUI_API void   c_iam_clip_set_duration_var(iam_clip* self, iam_variation_float* var);
CIMGUI_API void   c_iam_clip_set_delay_var(iam_clip* self, iam_variation_float* var);
CIMGUI_API void   c_iam_clip_set_timescale_var(iam_clip* self, iam_variation_float* var);
// Callbacks
CIMGUI_API void   c_iam_clip_on_begin(iam_clip* self, iam_clip_callback cb, void* user);
CIMGUI_API void   c_iam_clip_on_update(iam_clip* self, iam_clip_callback cb, void* user);
CIMGUI_API void   c_iam_clip_on_complete(iam_clip* self, iam_clip_callback cb, void* user);
CIMGUI_API void   c_iam_clip_end(iam_clip* self);
// ----------------------------------------------------
// iam_instance - playback control for a clip
// ----------------------------------------------------

// Playback control
CIMGUI_API void   c_iam_instance_pause(iam_instance* self);
CIMGUI_API void   c_iam_instance_resume(iam_instance* self);
CIMGUI_API void   c_iam_instance_stop(iam_instance* self);
CIMGUI_API void   c_iam_instance_destroy_playback(iam_instance* self);
CIMGUI_API void   c_iam_instance_seek(iam_instance* self, float time);
CIMGUI_API void   c_iam_instance_set_time_scale(iam_instance* self, float scale);
CIMGUI_API void   c_iam_instance_set_weight(iam_instance* self, float weight);
// Animation chaining - play another clip when this one completes
CIMGUI_API void   c_iam_instance_then(iam_instance* pOut, iam_instance* self, ImGuiID next_clip_id);
CIMGUI_API void   c_iam_instance_then_id(iam_instance* pOut, iam_instance* self, ImGuiID next_clip_id, ImGuiID next_instance_id);
CIMGUI_API void   c_iam_instance_then_delay(iam_instance* pOut, iam_instance* self, float delay);
// Query state
CIMGUI_API float  c_iam_instance_time(iam_instance* self);
CIMGUI_API float  c_iam_instance_duration(iam_instance* self);
CIMGUI_API bool   c_iam_instance_is_playing(iam_instance* self);
CIMGUI_API bool   c_iam_instance_is_paused(iam_instance* self);
// Get animated values
CIMGUI_API bool   c_iam_instance_get_float(iam_instance* self, ImGuiID channel, float* out);
CIMGUI_API bool   c_iam_instance_get_vec2(iam_instance* self, ImGuiID channel, ImVec2* out);
CIMGUI_API bool   c_iam_instance_get_vec4(iam_instance* self, ImGuiID channel, ImVec4* out);
CIMGUI_API bool   c_iam_instance_get_int(iam_instance* self, ImGuiID channel, int* out);
CIMGUI_API bool   c_iam_instance_get_color(iam_instance* self, ImGuiID channel, ImVec4* out, int color_space);
// Check validity
CIMGUI_API bool   c_iam_instance_valid(iam_instance* self);
// ----------------------------------------------------
// Clip System API
// ----------------------------------------------------

// Initialize/shutdown (optional - auto-init on first use)
CIMGUI_API void   c_iam_clip_init(int initial_clip_cap, int initial_inst_cap);
CIMGUI_API void   c_iam_clip_shutdown();
// c_Per-frame update (call after iam_update_begin_frame)
CIMGUI_API void   c_iam_clip_update(float dt);
// Garbage collection for instances
CIMGUI_API void   c_iam_clip_gc(unsigned int max_age_frames);
// Play a clip on an instance (creates or reuses instance)
CIMGUI_API void   c_iam_play(iam_instance* pOut, ImGuiID clip_id, ImGuiID instance_id);
// c_Get an existing instance (returns invalid iam_instance if not found)
CIMGUI_API void   c_iam_get_instance(iam_instance* pOut, ImGuiID instance_id);
// Query clip info
CIMGUI_API float  c_iam_clip_duration(ImGuiID clip_id);
CIMGUI_API bool   c_iam_clip_exists(ImGuiID clip_id);
// Stagger helpers - compute delay for indexed instances
CIMGUI_API float  c_iam_stagger_delay(ImGuiID clip_id, int index);
CIMGUI_API void   c_iam_play_stagger(iam_instance* pOut, ImGuiID clip_id, ImGuiID instance_id, int index);
// Layering support - blend multiple animation instances
CIMGUI_API void   c_iam_layer_begin(ImGuiID instance_id);
CIMGUI_API void   c_iam_layer_add(iam_instance* inst, float weight);
CIMGUI_API void   c_iam_layer_end(ImGuiID instance_id);
CIMGUI_API bool   c_iam_get_blended_float(ImGuiID instance_id, ImGuiID channel, float* out);
CIMGUI_API bool   c_iam_get_blended_vec2(ImGuiID instance_id, ImGuiID channel, ImVec2* out);
CIMGUI_API bool   c_iam_get_blended_vec4(ImGuiID instance_id, ImGuiID channel, ImVec4* out);
CIMGUI_API bool   c_iam_get_blended_int(ImGuiID instance_id, ImGuiID channel, int* out);
// Persistence (optional)
CIMGUI_API iam_result c_iam_clip_save(ImGuiID clip_id, char const* path);
CIMGUI_API iam_result c_iam_clip_load(char const* path, ImGuiID* out_clip_id);