imgui/Dalamud.Bindings.ImAnim/ImAnimNative.cs


    // Timing variation per loop iteration

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_set_duration_var")]
    public static partial void ClipSetDurationVar(ImAnimClip* self, ImAnimVariationFloat* var);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_set_delay_var")]
    public static partial void ClipSetDelayVar(ImAnimClip* self, ImAnimVariationFloat* var);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_set_timescale_var")]
    public static partial void ClipSetTimescaleVar(ImAnimClip* self, ImAnimVariationFloat* var);

    // Callbacks

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_on_begin")]
    public static partial void ClipOnBegin(ImAnimClip* self, delegate* unmanaged[Cdecl]<uint, void*, void> cb, void* userData);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_on_update")]
    public static partial void ClipOnUpdate(ImAnimClip* self, delegate* unmanaged[Cdecl]<uint, void*, void> cb, void* userData);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_on_complete")]
    public static partial void ClipOnComplete(ImAnimClip* self, delegate* unmanaged[Cdecl]<uint, void*, void> cb, void* userData);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_end")]
    public static partial void ClipEnd(ImAnimClip* self);


    // ----------------------------------------------------
    // iam_instance - playback control for a clip
    // ----------------------------------------------------

    // Playback control

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_pause")]
    public static partial void InstancePause(ImAnimInstance* self);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_resume")]
    public static partial void InstanceResume(ImAnimInstance* self);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_stop")]
    public static partial void InstanceStop(ImAnimInstance* self);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_destroy_playback")]
    public static partial void InstanceDestroyPlayback(ImAnimInstance* self);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_seek")]
    public static partial void InstanceSeek(ImAnimInstance* self, float time);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_set_time_scale")]
    public static partial void InstanceSetTimeScale(ImAnimInstance* self, float scale);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_set_weight")]
    public static partial void InstanceSetWeight(ImAnimInstance* self, float weight);

    // Animation chaining - play another clip when this one completes

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_then")]
    public static partial void InstanceThen(ImAnimInstance* pOut, ImAnimInstance* self, uint nextClipId);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_then_id")]
    public static partial void InstanceThenId(ImAnimInstance* pOut, ImAnimInstance* self, uint nextClipId, uint nextInstanceId);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_then_delay")]
    public static partial void InstanceThenDelay(ImAnimInstance* pOut, ImAnimInstance* self, float delay);

    // Query state

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_time")]
    public static partial float InstanceTime(ImAnimInstance* self);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_duration")]
    public static partial float InstanceDuration(ImAnimInstance* self);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_is_playing")]
    public static partial byte InstanceIsPlaying(ImAnimInstance* self);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_is_paused")]
    public static partial byte InstanceIsPaused(ImAnimInstance* self);

    // Get animated values

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_get_float")]
    public static partial byte InstanceGetFloat(ImAnimInstance* self, uint channel, float* outVal);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_get_vec2")]
    public static partial byte InstanceGetVec2(ImAnimInstance* self, uint channel, Vector2* outVal);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_get_vec4")]
    public static partial byte InstanceGetVec4(ImAnimInstance* self, uint channel, Vector4* outVal);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_get_int")]
    public static partial byte InstanceGetInt(ImAnimInstance* self, uint channel, int* outVal);

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_get_color")]
    public static partial byte InstanceGetColor(ImAnimInstance* self, uint channel, Vector4* outVal, ImAnimColorSpace colorSpace);

    // Check validity

    [LibraryImport(LibName, EntryPoint = "c_iam_instance_valid")]
    public static partial byte InstanceValid(ImAnimInstance* self);


    // ----------------------------------------------------
    // Clip System API
    // ----------------------------------------------------

    // Initialize/shutdown (optional - auto-init on first use)
    [LibraryImport(LibName, EntryPoint = "c_iam_clip_init")]
    public static partial void ClipInit(int initialClipCap, int initialInstCap);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_shutdown")]
    public static partial void ClipShutdown();

    // c_Per-frame update (call after iam_update_begin_frame)
    [LibraryImport(LibName, EntryPoint = "c_iam_clip_update")]
    public static partial void ClipUpdate(float dt);

    // Garbage collection for instances
    [LibraryImport(LibName, EntryPoint = "c_iam_clip_gc")]
    public static partial void ClipGc(uint maxAgeFrames);

    // Play a clip on an instance (creates or reuses instance)
    [LibraryImport(LibName, EntryPoint = "c_iam_play")]
    public static partial void Play(ImAnimInstance* pOut, uint clipId, uint instanceId);

    // c_Get an existing instance (returns invalid iam_instance if not found)
    [LibraryImport(LibName, EntryPoint = "c_iam_get_instance")]
    public static partial void GetInstance(ImAnimInstance* pOut, uint instanceId);

    // Query clip info
    [LibraryImport(LibName, EntryPoint = "c_iam_clip_duration")]
    public static partial float ClipDuration(uint clipId);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_exists")]
    public static partial byte ClipExists(uint clipId);

    // Stagger helpers - compute delay for indexed instances
    [LibraryImport(LibName, EntryPoint = "c_iam_stagger_delay")]
    public static partial float StaggerDelay(uint clipId, int index);

    [LibraryImport(LibName, EntryPoint = "c_iam_play_stagger")]
    public static partial void PlayStagger(ImAnimInstance* pOut, uint clipId, uint instanceId, int index);

    // Layering support - blend multiple animation instances
    [LibraryImport(LibName, EntryPoint = "c_iam_layer_begin")]
    public static partial void LayerBegin(uint instanceId);

    [LibraryImport(LibName, EntryPoint = "c_iam_layer_add")]
    public static partial void LayerAdd(ImAnimInstance* inst, float weight);

    [LibraryImport(LibName, EntryPoint = "c_iam_layer_end")]
    public static partial void LayerEnd(uint instanceId);

    [LibraryImport(LibName, EntryPoint = "c_iam_get_blended_float")]
    public static partial byte GetBlendedFloat(uint instanceId, uint channel, float* outVal);

    [LibraryImport(LibName, EntryPoint = "c_iam_get_blended_vec2")]
    public static partial byte GetBlendedVec2(uint instanceId, uint channel, Vector2* outVal);

    [LibraryImport(LibName, EntryPoint = "c_iam_get_blended_vec4")]
    public static partial byte GetBlendedVec4(uint instanceId, uint channel, Vector4* outVal);

    [LibraryImport(LibName, EntryPoint = "c_iam_get_blended_int")]
    public static partial byte GetBlendedInt(uint instanceId, uint channel, int* outVal);

    // Persistence (optional)
    [LibraryImport(LibName, EntryPoint = "c_iam_clip_save")]
    public static partial ImAnimResult ClipSave(uint clipId, byte* path);

    [LibraryImport(LibName, EntryPoint = "c_iam_clip_load")]
    public static partial ImAnimResult ClipLoad(byte* path, uint* outClipId);
}
